--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Arquivos referentes ao segundo trabalho da disciplina organização de arquivos
+Arquivos referentes à implementação dos projetos da disciplina Organização de Arquivos (SCC0215) 01/2019
